# whispera

./: .gitignore  README.md  build.bat  build.sh  client_config.yaml  config.yaml  go.mod  go.sum  install.sh  menu  tmp_key_check.go  update.sh
.agent/workflows/: build-deploy.md
.claude/: settings.local.json
client-package-tauri/: index.html  package-lock.json  package.json  vite.config.js
client-package-tauri/src/: main.js  styles.css
client-package-tauri/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
client-package-tauri/src-tauri/src/: main.rs
client-package-tauri/src/modules/: active_connections.js  advanced_features.js  dashboard_data.js  i18n.js  key_connection.js  notifications.js  settings_persistence.js  wave_animator.js  window_controls.js
cmd/auto-connect/: main.go
cmd/client/: main.go
cmd/server/: main.go
configs/: discord-voip.yaml  modular-client.yaml
core/proxy/: http.go
core/transport/: udp.go
internal/core/interfaces/: interfaces.go
internal/crypto/crypt/: decrypt_worker_pool.go  encrypt_worker_pool.go
internal/dns/: resolver.go
internal/logger/: logger.go
internal/mux/: mux.go
internal/network/: packet_handler.go
internal/obfuscation/: integration.go
internal/proto/: batch_sender.go  reassembly.go
internal/proxy/: socks5.go
internal/stats/: stats.go
internal/util/: util.go
internal/websocket/: batch_writer.go
internal/whispera/: protocol.go
scripts/: install-client.sh  quick-connect.bat  quick-connect.sh
web/: index.html
web/js/: api.js  app.js  config-manager.js
(+75 files in other folders)
